# Fractal

./: .gitignore  Building.md  CMakeLists.txt  CMakePresets.json  README.md
src/: Colors.hpp  Fractals.hpp  ThreadPool.hpp  Visualizer.hpp  main.cpp
